--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
+certifi==2020.6.20
+chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.1
 libsnmp==2.0.5
 MarkupSafe==1.1.1
 pexpect==4.8.0
-pkg-resources==0.0.0
 ply==3.11
 ptyprocess==0.6.0
 pyasn1==0.4.8
@@ -14,4 +16,7 @@ pycryptodomex==3.9.7
 pysmi==0.3.4
 pysnmp==4.4.12
 pysnmp-mibs==0.1.6
+requests==2.24.0
+urllib3==1.25.9
+uWSGI==2.0.19.1
 Werkzeug==1.0.0
