update uwsgi server configuration

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,16 +1,33 @@
 [uwsgi]
+; развертка
 mount = /sauronport=wsgi.py
 callable = app
+uid = www-data
+gid = www-data
+socket = 127.0.0.1:5060
 
+; настройки
 master = true
 manage-script-name = true
 die-on-term = true
 pcre-jit = true
 
+; параметры
 processes = 2
 threads = 2
 buffer-size = 32768
 
-uid = www-data
-gid = www-data
-socket = 127.0.0.1:5060
+; ограничение жизни workers (12 часов)
+max-worker-lifetime = 43200
+max-requests = 200
+reload-on-rss = 1024
+worker-reload-mercy = 10
+
+; логирование
+disable-logging = true
+log-4xx = true
+log-5xx = true
+
+; лейблинг процессов
+auto-procname = true
+procname-prefix = service_sauronport_
