uwsgi server conf: longer workers lifetime (72 hours)

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -17,8 +17,8 @@ processes = 2
 threads = 2
 buffer-size = 32768
 
-; ограничение жизни workers (12 часов)
-max-worker-lifetime = 43200
+; ограничение жизни workers (72 часа)
+max-worker-lifetime = 259200
 max-requests = 200
 reload-on-rss = 1024
 worker-reload-mercy = 10
