rebase commit: cleaning history

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -17,7 +17,7 @@ processes = 2
 threads = 2
 buffer-size = 32768
 
-; ограничение жизни workers (72 часа)
+; ограничение жизни воркеров (72 часа)
 max-worker-lifetime = 259200
 max-requests = 200
 reload-on-rss = 1024
